# gltf_builder

./: .cspell.txt  .envrc  .gitattributes  .gitignore  .readthedocs.yaml  CHANGES.md  CONFIG  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  quaternions.md  requirements.txt
.cspell/: custom-dictionary-workspace.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  question.md
.github/workflows/: create-pr.yml  publish.yml
docs/: .gitattributes  README.md  compiler.md  compiler_classes.mmd  erDiagram.mmd  erDiagramGeometry.mmd  erDiagramUserSubset.mmd  glTF.md  input_classes.mmd
docs/img/: compiler_classes.mmd  erDiagram.mmd  erDiagramGeometry.mmd  erDiagramUserSubset.mmd  input_classes.mmd
scripts/: build  devtool
src/gltf_builder/: __init__.py  accessor.py  accessors.py  assets.py  attribute_types.py  buffer.py  buffers.py  builder.py  cameras.py  compile.py  compiler.py  core_types.py  decorators.py  element.py  elements.py  entities.py  extensions.py  geometries.py  global_config.py  global_shared.py  global_state.py  holder.py  holders.py  images.py  (+24 more)
test/: README.md  conftest.py  gltf-validator.js  test_attribute_types.py  test_builder.py  test_cameras.py  test_examples.py  test_extensions.py  test_geometries.py  test_global_state.py  test_images.py  test_materials.py  test_matrix.py  test_meshes.py  test_metaclasses.py  test_plugn_loader.py  test_quaternions.py  test_samplers.py  test_scenes.py  test_skins.py  test_textures.py  test_utils.py
(+5 files in other folders)
