[project]
name = "gltf-builder"
version = "0.2.0"
description = "Library for building gltf files, handling buffers, views, and accessors."
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Graphics",
    "Topic :: File Formats",
    "Environment :: GPU",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
readme = "README.md"
authors = [
    { name = "Bob Kerns", email = "1154903+BobKerns@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pygltflib>=1.16.3",
    "semver>=3.0.4",
]

[project.entry-points.'gltf_builder.extensions']

GLTFB_example = "gltf_builder.plugins.example:ExamplePlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ipython",
    "ipykernel",
    "pip",
]

[tool.ruff.lint]
ignore = [
"E701"
]
exclude = [
"*.pyi"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

